syntax = "proto2";

option optimize_for = LITE_RUNTIME;

message CMsgConnect
{
	required uint64 idAccount = 1;
	optional string szSessionID = 2;
}